--- a/build
+++ b/build
@@ -12,4 +12,4 @@ export GOBIN=${PWD}/bin
 export GOPATH=${PWD}/gopath
 export CGO_ENABLED=0
 
-go build -a -ldflags '-w' -o bin/validate ${REPO_PATH}
+go build -o bin/validate -a -installsuffix ${REPO_PATH}
